Refactor CSS styles and improve responsiveness
Bouton inscription plus ptt pour les medias et liste-style none

--- a/css/style.css
+++ b/css/style.css
@@ -329,4 +329,14 @@ tr:nth-child(even) td {
     table {
         width: 95%;
     }
+
+     li {
+        list-style: none;
+        text-align: left;
+    }
+
+    .btn-inscription {
+        width: 75%;
+    }
 }
+
